force-app/main/default/objects/AcctPlanStandardFee__c/AcctPlanStandardFee__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>ค่า Standard Fee step 3 Domain I</description>
    <label>Account Plan Standard Fee</label>
</CustomObject>