force-app/main/default/objects/AcctPlanStandardFee__c/fields/Default_StandardFee__c.field-meta.xml
<CustomField>
    <fullName>Default_StandardFee__c</fullName>
    <label>Default StandardFee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>