force-app/main/default/objects/AcctPlanStandardFee__c/fields/MB_StandardFee__c.field-meta.xml
<CustomField>
    <fullName>MB_StandardFee__c</fullName>
    <label>MB StandardFee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>