force-app/main/default/objects/AcctPlanStandardFee__c/fields/TypeOfFee__c.field-meta.xml
<CustomField>
    <fullName>TypeOfFee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TypeOfFee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>